6482530 Need Ethernet driver for Intel G965 chipset 6491179 link aggregation with e1000g does not work unless snoop is running 6494743 e1000g 5.1.4 driver does not work with s11_52 6502458 e1000g is open source, move the source from usr/closed to use/src 6505360 e1000g Makefile should not include "-N drv/dld" in the LDFLAGS

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1353,3 +1353,8 @@ XGE_HAL_OBJS =  xgehal-channel.o xgehal-fifo.o xgehal-ring.o  xgehal-config.o \
 		xgehal-driver.o  xgehal-mm.o xgehal-stats.o  xgehal-device.o \
 		xge-queue.o  xgehal-mgmt.o xgehal-mgmtaux.o
 
+#
+#	e1000g module
+#
+E1000G_OBJS +=	e1000g_debug.o e1000_hw.o e1000g_main.o e1000g_alloc.o \
+		e1000g_tx.o e1000g_rx.o e1000g_stat.o e1000g_ndd.o
