PSARC/2006/704 libpri shared library and ds_pri kernel driver 6496303 identity information support (pri) for T5120/T5220 6512947 fmdump -v -u command core dumps in strncmp when testing N2 PIU 6518718 Cpumem-diagnosis get SEGV when creating cpu fault 6518722 The value of serial & part numbers are not correct for a cpu fault 6518796 sun4v cpu topology support for the new N2 PRI

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -439,6 +439,7 @@ sparc_SUBDIRS= \
 	cmd/wrsmconf \
 	cmd/wrsmstat \
 	lib/libdscp \
+	lib/libpri \
 	lib/libwrsmconf \
 	lib/wrsm \
 	lib/libpcp \
