backout 6520381: oh no you di'nt (do a full build)!

--- a/usr/src/cmd/mdb/sun4u/modules/Makefile
+++ b/usr/src/cmd/mdb/sun4u/modules/Makefile
@@ -19,13 +19,13 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 include $(SRC)/Makefile.master
 
-SUBDIRS = unix wrsm lw8 serengeti wrsmd opl
+SUBDIRS = unix wrsm lw8 serengeti wrsmd
 
 include ../../Makefile.subdirs
