--- a/usr/src/cmd/mdb/sun4u/modules/opl/oplhwd/v9/Makefile
+++ b/usr/src/cmd/mdb/sun4u/modules/opl/oplhwd/v9/Makefile
@@ -23,7 +23,7 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 
 MODULE = oplhwd.so
 MDBTGT = kvm
