6496714 cpu/mem de source of ereport.fm.fmd.module 6504751 CPU/Mem DE not issuing correct faults for L2 caches 6505708 Faults for MAU not in hc scheme 6506208 CPU/Mem DE to fill in location field in fault event 6510226 FRU FMRI for sun4v cpu faults should be canonical hc: scheme, not legacy hc: 6510228 sun4v page fault FRU FMRI should be hc: scheme 6511726 L2 Cache Directory Fatal faults display "l2ctl" but should be "l2cachectl" 6516824 fmd leaks in cmd_xxu_hdlr 6519408 SERD engine does not work for ce errors. 6520375 silently drop FBR ereports until policy agreed upon

--- a/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis/Makefile
+++ b/usr/src/cmd/fm/modules/sun4v/cpumem-diagnosis/Makefile
@@ -19,12 +19,14 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 ARCH = sun4v
+
+sun4v_SRCS = cmd_hc_sun4v.c
 
 INCDIRS = $(SRC)/uts/sun4v \
 	$(ROOT)/usr/platform/sun4v/include
