--- a/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis/Makefile
+++ b/usr/src/cmd/fm/modules/sun4u/cpumem-diagnosis/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -30,6 +30,7 @@ sun4u_SRCS = cmd_ecache.c \
 		cmd_dp.c \
 		cmd_dperr.c \
 		cmd_dp_page.c \
+		cmd_hc_opl.c \
 		cmd_opl.c \
 		cmd_oplerr.c
 
