backout 6519375/6520142/6520501: it breaks the x86 build (and I'm all out of bubble gum)

--- a/usr/src/cmd/fm/schemes/cpu/sparc/Makefile
+++ b/usr/src/cmd/fm/schemes/cpu/sparc/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,9 +28,10 @@
 
 include ../../Makefile.com
 
-SRCS = cpu.c
+SRCS = cpu.c cpu_mdesc.c
 
-LDLIBS += -lkstat -L$(ROOTLIB)/fm -ltopo
+CPPFLAGS += -I. -I$(ROOT)/usr/platform/sun4v/include
+LDLIBS += -L$(ROOTLIB)/fm -lmdesc -lkstat -lldom
 LDFLAGS += -R/usr/lib/fm
 
 include ../../Makefile.targ
