--- a/usr/src/uts/sparc/hook/Makefile
+++ b/usr/src/uts/sparc/hook/Makefile
@@ -68,11 +68,11 @@ CFLAGS		+= $(CCVERBOSE)
 
 def:		$(DEF_DEPS)
 
-all:		$(ALL_DEPS)
+all:		$(ALL_DEPS) $(SISCHECK_DEPS)
 
-clean:		$(CLEAN_DEPS)
+clean:		$(CLEAN_DEPS) $(SISCLEAN_DEPS)
 
-clobber:	$(CLOBBER_DEPS)
+clobber:	$(CLOBBER_DEPS) $(SISCLEAN_DEPS)
 
 lint:		$(LINT_DEPS)
 
@@ -80,16 +80,7 @@ modlintlib:	$(MODLINTLIB_DEPS)
 
 clean.lint:	$(CLEAN_LINT_DEPS)
 
-install:	$(INSTALL_DEPS)
-
-sis_check:	sis_check.obj
-sis_check.obj: $(ALL_DEPS)
-	@$(GREP) -v '#' $(MODULE).objt-symbols.obj64 |$(GREP) . |$(SORT) -u \
-	    > $(MODULE).symbols.tmp
-	@$(NM) obj64/$(MODULE) |$(GREP) OBJT |$(GREP) -v UNDEF | \
-	    $(CUT) -d'|' -f8 |$(GREP) -v '^___const_' |$(SORT) -u \
-	    > $(MODULE).symbols.tmp.new
-	-@$(DIFF) $(MODULE).symbols.tmp $(MODULE).symbols.tmp.new
+install:	$(INSTALL_DEPS) $(SISCHECK_DEPS)
 
 #
 #	Include common targets.
