--- a/usr/src/uts/sparc/ip/Makefile
+++ b/usr/src/uts/sparc/ip/Makefile
@@ -89,11 +89,11 @@ LDFLAGS		+= -dy -Nmisc/md5 -Ncrypto/swrand -Nmisc/hook -Nmisc/neti
 
 def:		$(DEF_DEPS)
 
-all:		$(ALL_DEPS)
+all:		$(ALL_DEPS) $(SISCHECK_DEPS)
 
-clean:		$(CLEAN_DEPS)
+clean:		$(CLEAN_DEPS) $(SISCLEAN_DEPS)
 
-clobber:	$(CLOBBER_DEPS)
+clobber:	$(CLOBBER_DEPS) $(SISCLEAN_DEPS)
 
 lint:		$(LINT_DEPS)
 
@@ -101,27 +101,12 @@ modlintlib:	$(MODLINTLIB_DEPS)
 
 clean.lint:	$(CLEAN_LINT_DEPS)
 
-install:	$(INSTALL_DEPS)
+install:	$(INSTALL_DEPS) $(SISCHECK_DEPS)
+	pwd;
+	echo "abc me";
 
 $(ROOTLINK):	$(ROOT_STRMOD_DIR) $(ROOTMODULE)
 	-$(RM) $@; ln $(ROOTMODULE) $@
-
-sis_check:	sis_check.obj sis_check.debug
-sis_check.obj: $(ALL_DEPS)
-	@$(GREP) -v '#' $(MODULE).objt-symbols.obj64 |$(GREP) . |$(SORT) -u \
-	    > $(MODULE).symbols.tmp
-	@$(NM) obj64/$(MODULE) |$(GREP) OBJT |$(GREP) -v UNDEF | \
-	    $(CUT) -d'|' -f8 |$(GREP) -v '^___const_' |$(SORT) -u \
-	    > $(MODULE).symbols.tmp.new
-	-@$(DIFF) $(MODULE).symbols.tmp $(MODULE).symbols.tmp.new
-
-sis_check.debug: $(ALL_DEPS)
-	@$(GREP) -v '#' $(MODULE).objt-symbols.debug64 |$(GREP) . |$(SORT) -u \
-	    > $(MODULE).symbols.dbg.tmp
-	@$(NM) -n debug64/$(MODULE) |$(GREP) OBJT |$(GREP) -v UNDEF | \
-	    $(CUT) -d'|' -f8 |$(GREP) -v '^___const_' |$(SORT) -u \
-	    > $(MODULE).symbols.dbg.tmp.new
-	-@$(DIFF) $(MODULE).symbols.dbg.tmp $(MODULE).symbols.dbg.tmp.new
 
 #
 #	Include common targets.
