6519375 refactored the mdesc code in cpu scheme, platform-cpu.so and chip.so into a single code base 6520142 sun4v motherboard/chip enums leaking memory 6520501 libtopo exports a set of errors associated with node methods

--- a/usr/src/cmd/fm/schemes/cpu/sparc/Makefile
+++ b/usr/src/cmd/fm/schemes/cpu/sparc/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,10 +28,10 @@
 
 include ../../Makefile.com
 
-SRCS = cpu.c cpu_mdesc.c
+SRCS = cpu.c
 
-CPPFLAGS += -I. -I$(ROOT)/usr/platform/sun4v/include
-LDLIBS += -L$(ROOTLIB)/fm -lmdesc -lkstat -lldom
+LDLIBS += -lkstat \
+	-L$(ROOTLIB)/fm -ltopo
 LDFLAGS += -R/usr/lib/fm
 
 include ../../Makefile.targ
