--- a/usr/src/cmd/fm/schemes/cpu/i386/Makefile
+++ b/usr/src/cmd/fm/schemes/cpu/i386/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,7 +29,9 @@
 include ../../Makefile.com
 
 SRCS = cpu.c
-LDLIBS += -lkstat
+LDLIBS += -lkstat \
+	-L$(ROOTLIB)/fm -ltopo
+LDFLAGS += -R/usr/lib/fm
 
 include ../../Makefile.targ
 
