6470504 Remove Niagara2 IDLE loop workaround 6481563 Add support for Niagara2 2.x SPARC performance counters 6481949 handle dynamic hpriv peformance counting using N2 2.0 PCR 6528668 move stick compare workaround to Niagara2 and generic CPU module

--- a/usr/src/uts/sun4v/Makefile.workarounds
+++ b/usr/src/uts/sun4v/Makefile.workarounds
@@ -21,7 +21,7 @@
 #
 # uts/sun4v/Makefile.workarounds
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -35,8 +35,5 @@ WORKAROUND_DEFS =
 WORKAROUND_DEFS	+= -DQCN_POLLING		# XXXQ
 WORKAROUND_DEFS += -DDO_CORELEVEL_LOADBAL
 
-# The following is required to support Niagara2 1.0
-WORKAROUND_DEFS	+= -DN2_ERRATUM_49	# %stick_compare{6:0} ignored
-WORKAROUND_DEFS	+= -DN2_IDLE_WORKAROUND
-WORKAROUND_DEFS += -DN2_ERRATUM_112	# multiple traps for 1 event
-WORKAROUND_DEFS += -DN2_ERRATUM_134	# PMU doesn't set OV bit
+# The following is required to support Niagara2 1.x
+WORKAROUND_DEFS += -DN2_1x_CPC_WORKAROUNDS	# Errata 94, 112, 132, & 134
