PSARC 2006/705 pcwl and pcan 802.11b Wireless Drivers 6209928 drivers for Wavelan, Prism II, and Aironet 802.11b devices

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -272,6 +272,7 @@ COMMON_SUBDIRS= \
 	SUNWypu \
 	SUNWpamsc \
 	SUNWpapi \
+	SUNWpcan \
 	SUNWpcelx \
 	SUNWpcmci  \
 	SUNWpcmcu  \
@@ -279,6 +280,7 @@ COMMON_SUBDIRS= \
 	SUNWpcr	\
 	SUNWpcser \
 	SUNWpcu	\
+	SUNWpcwl \
 	SUNWpd    \
 	SUNWphx \
 	SUNWpolkit \
