--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1247,6 +1247,8 @@ BUSRA_OBJS += busra.o
 
 PCS_OBJS += pcs.o
 
+PCAN_OBJS += pcan.o
+
 PCATA_OBJS += pcide.o pcdisk.o pclabel.o pcata.o
 
 PCMEM_OBJS += pcmem.o
@@ -1254,6 +1256,8 @@ PCMEM_OBJS += pcmem.o
 PCRAM_OBJS += pcram.o
 
 PCSER_OBJS += pcser.o pcser_cis.o
+
+PCWL_OBJS += pcwl.o
 
 PSET_OBJS +=	pset.o
 
