--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -266,6 +266,8 @@ DRV_KMODS	+= pci_pci
 DRV_KMODS	+= pcic
 DRV_KMODS	+= pcie_pci
 DRV_KMODS	+= physmem
+DRV_KMODS	+= pcan
+DRV_KMODS	+= pcwl
 DRV_KMODS	+= pm
 DRV_KMODS	+= poll
 DRV_KMODS	+= pool
