--- a/usr/src/cmd/sgs/rtld/Makefile.targ
+++ b/usr/src/cmd/sgs/rtld/Makefile.targ
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -51,6 +51,10 @@ pics/%.o:	../common/%.c
 		$(POST_PROCESS_O)
 
 pics/%.o:	$(VAR_AVLDIR)/%.c
+		$(COMPILE.c) -o $@ $< $(WARNFLAGS)
+		$(POST_PROCESS_O)
+
+pics/%.o:	$(VAR_DTRDIR)/%.c
 		$(COMPILE.c) -o $@ $< $(WARNFLAGS)
 		$(POST_PROCESS_O)
 
