--- a/usr/src/cmd/sgs/rtld/amd64/Makefile
+++ b/usr/src/cmd/sgs/rtld/amd64/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -45,7 +45,7 @@ G_MACHOBJS=	doreloc.o
 P_MACHOBJS=	amd64_elf.o	_setup.o	zero.o  \
 		dlamd64getunwind.o
 
-CP_MACHOBJS=	dtrace_data.o
+CP_MACHOBJS=
 
 S_MACHOBJS=	
 
