--- a/usr/src/uts/sun4u/lw8/Makefile.lw8
+++ b/usr/src/uts/sun4u/lw8/Makefile.lw8
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -112,6 +112,7 @@ MACHINE_DEFS	+= -DMAX_MEM_NODES=8
 MACHINE_DEFS	+= -DLOCKED_DTLB_ENTRIES=6
 # Max IOSRAM TOC major version number supported
 MACHINE_DEFS	+= -DMAX_IOSRAM_TOC_VER=0x1
+MACHINE_DEFS	+= -DC_OBP
 
 #       Define for inline pre-processing since
 #       cpp not smart about v9 yet.
