6504327 make with no target in i86pc fails 6521185 Solaris trusts BIOS too much wrt AMD erratum 172 6528027 fallback to cpu.generic if number of mca banks not as expected

--- a/usr/src/uts/i86pc/Makefile.workarounds
+++ b/usr/src/uts/i86pc/Makefile.workarounds
@@ -107,3 +107,7 @@ WORKAROUND_DEFS += -DOPTERON_WORKAROUND_6336786
 #
 WORKAROUND_DEFS += -DOPTERON_WORKAROUND_6323525
 
+#
+# Some Registered DIMMs incompatible with address parity feature
+#
+WORKAROUND_DEFS += -DOPTERON_ERRATUM_172
