6393314 move driver dad to usr/src

--- a/usr/src/uts/sun/Makefile.files
+++ b/usr/src/uts/sun/Makefile.files
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -53,6 +53,8 @@ AUDIO1575_OBJS += audio1575.o
 BPP_OBJS +=	bpp.o
 
 CGSIX_OBJS +=	cgsix.o
+
+DAD_OBJS +=	dad.o
 
 DMA_OBJS +=	dmaga.o
 
