--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -283,11 +283,11 @@ DRV_KMODS	+= i8042 kb8042 mouse8042
 DRV_KMODS	+= fcode
 DRV_KMODS	+= socal
 DRV_KMODS	+= sgen
+DRV_KMODS	+= dad
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audioens
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audiovia823x
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= chxge
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= dad
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= ifp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= scsi_vhci
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= uata
